--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,22 +1,140 @@
+@font-face {
+    font-family: 'Lato';
+    src: url('../fonts/Lato-Regular.ttf');
+}
+
+@font-face {
+    font-family: 'Oswald';
+    src: url('../fonts/Oswald-Regular.ttf');
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
 .titulo {
     font-size: 20px;
     color: white;
     text-align: center;
 }
 
-.menu_box_list li a.document{
-	background-image:url(../images/document.png);
-	background-repeat:no-repeat;
-    background-position:12px  6px;
+.titulo-menu {
+    color: #f3f8fb;
+    font-family: 'Oswald';
+    font-weight: initial;
 }
 
-#menuOpcao{
-    display: none;
+.hidden-menu {
+    display: none !important;
     padding-top: 0;
 }
 
 #resultado {
-    display: none;
-    padding-top: 35px;
+    display: block;
+    padding: 35px 0 45px 0;
     color: white;
+    font-family: 'Lato';
 }
+ 
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.flex-row {
+    display: flex;
+    flex-direction: row;
+}
+
+.flex-center {
+    justify-content: center;
+}
+
+.flex-middle {
+    align-items: center;
+}
+
+#page-wrapper {
+    background-color: #170800;
+    height: 100%;
+}
+
+.menu {
+    background-color: #473d39;
+    border-radius: 5px;
+}
+
+div#opcoesCalculo span {
+    color: white;
+    text-align: center;
+    padding: 10px;
+    margin: 5px 0px;
+    background-color: #d1a14a;
+    font-family: 'Lato';
+    cursor: pointer;
+}
+
+div#opcoesCalculo span:hover{
+    background: #8b600e
+}
+
+.button-wrapper {
+    margin: 10px 0;
+}
+
+#valorCausa {
+    width: 80%;
+}
+
+.fade-in {
+    -moz-transition: all .2s ease-in;
+    -o-transition: all .2s ease-in;
+    -webkit-transition: all .2s ease-in;
+    transition: all .2s ease-in;
+}
+
+.action-button {
+    background-color: #d1a14a ; 
+    border: none;
+    color: white;
+    padding: 8px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.action-button:hover{
+    background-color: #8b600e;
+    cursor: pointer; 
+}
+
+/* RESPONSIVE */
+
+
+/* MOBILE DEVICES */
+
+[class*="col-"] {
+    width: 100%;
+}
+
+/* COMPUTER BROWSER */
+@media only screen and (min-width: 620px) {
+    .col-1 {width: 8.33%;}
+    .col-2 {width: 16.66%;}
+    .col-3 {width: 25%;}
+    .col-4 {width: 33.33%;}
+    .col-5 {width: 41.66%;}
+    .col-6 {width: 50%;}
+    .col-7 {width: 58.33%;}
+    .col-8 {width: 66.66%;}
+    .col-9 {width: 75%;}
+    .col-10 {width: 83.33%;}
+    .col-11 {width: 91.66%;}
+    .col-12 {width: 100%;}
+}
+
+
+
